DuPont DevSB/src/objects/FF_PSA_Cost_Center__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FF_PSA_Business_Development__c</fullName>
        <label>Business Development</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Company_code__c</fullName>
        <label>Company code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Training__c</fullName>
        <label>Training</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>FF PSA Cost Center</label>
</CustomObject>